ISSUP-4394 add placeholder API for assigning users to accounts
