# modules/dxp/apps/osb/osb-provisioning/osb-provisioning-rest/osb-provisioning-rest-impl/rest-openapi.yaml
@@ -280,6 +280,61 @@ info:
     version: v1.0
 openapi: 3.0.1
 paths:
+    "/accounts/{accountKey}/contacts/by-uuid/{contactUuid}/roles":
+        delete:
+            description:
+                Unassigns roles from the contact for the account.
+            parameters:
+                - in: path
+                  name: accountKey
+                  required: true
+                  schema:
+                      type: string
+                - in: path
+                  name: contactUuid
+                  required: true
+                  schema:
+                      type: string
+                - in: query
+                  name: contactRoleNames
+                  required: true
+                  schema:
+                      items:
+                          type: string
+                      type: array
+            responses:
+                204:
+                    content:
+                        application/json: {}
+                        application/xml: {}
+            tags: ["Account"]
+        put:
+            description:
+                Assigns roles to the contact for the account.
+            parameters:
+                - in: path
+                  name: accountKey
+                  required: true
+                  schema:
+                      type: string
+                - in: path
+                  name: contactUuid
+                  required: true
+                  schema:
+                      type: string
+                - in: query
+                  name: contactRoleNames
+                  required: true
+                  schema:
+                      items:
+                          type: string
+                      type: array
+            responses:
+                204:
+                    content:
+                        application/json: {}
+                        application/xml: {}
+            tags: ["Account"]
     "/accounts/{accountKey}/license-keys":
         get:
             description:
